Fixed icon overlap issue, added ACL paper news.

--- a/css/style.css
+++ b/css/style.css
@@ -649,6 +649,11 @@ button:focus,
     margin-bottom : 40px;
     }
 
+.content-item h1 {
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
 .content-item h3 {
     margin         : 0 0 10px;
     line-height    : 1;
